final fixes navigation small screen

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,17 +1,16 @@
-//font-family: 'Actor', sans-serif
-//font-family: 'Lato', sans-serif
-
 // Variables
 $blue: #6D9EAB
 $gold: #685636
 $rose: #7F6C6D
 $offWhite: #CEC7BC
 $bgBody: #EAE3E0
-$hoverHeading: 2.4em
+$hoverHeading: 1.8em
 $actor: 'Actor', sans-serif
 
-//Mixins
+//font-family: 'Actor', sans-serif
+//font-family: 'Lato', sans-serif
 
+//MIXINS
 @mixin cover
     width: 100%
     padding: 0 5% 5%
@@ -28,35 +27,57 @@ $actor: 'Actor', sans-serif
         text-transform: uppercase
         text-align: center
         position: absolute
-        bottom: 46%
+        bottom: 47%
         width: 100%
     .subtitle
-        font-size: 1.6em
+        font-size: 1.4em
         text-transform: uppercase
         display: block
         font-family: $actor
         text-align: center
         position: absolute
-        bottom: 41%
+        bottom: 42%
         width: 100%
     .raute
         position: absolute
         margin-top: -100%
+//RESET
+*
+    margin: 0
+    padding: 0
+    border: 0
+    font-size: 100%
+    font: inherit
+    vertical-align: baseline
+// HTML5 display-role reset for older browsers
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section
+    display: block
+body
+    line-height: 1
+ol, ul
+    list-style: none
 
-
-
+// GLOBAL STYLES
 body
     background-color: black
     margin: 0
-    padding: 0
-
 #wrapper
     margin: 0 auto
     box-sizing: border-box
     position: relative
     width: 100%
     padding: 60px 0 0
+    min-width: 340px
+h1
+    color: $gold
+    padding-left: 5%
+    text-transform: uppercase
+    font-size: 2.2em
+    font-family: $actor
+    margin: 80px 0 20px
 
+// VIDEO ON INDEX PAGE
 .fullscreen
     min-height: 100%
     min-width: 100%
@@ -66,6 +87,7 @@ body
     left: 50%
     transform: translate(-50%, -50%)
 
+//NAVIGATION
 nav
     padding-top: 0
     padding-bottom: 30px
@@ -73,27 +95,37 @@ nav
     top: 0
     width: 100%
     z-index: 1
-
 nav ul
     list-style-type: none
-    padding-right: 10%
     overflow: hidden
     height: 0
-
+    padding-left: 0
 nav ul.open
     height: auto
     background-color: black
-    opacity: .7
+    opacity: .9
     margin-top: 0
-
+nav ul li
+    border-bottom: solid 2px $gold
+    margin: 0
+nav ul li:last-child
+    border: none
 nav ul li a
     z-index: 100
     display: block
     text-decoration: none
-    padding: 10px
+    padding: 15px 0 15px 40px
     font-family: 'Actor', sans-serif
-    color: $blue
-
+    color: $offWhite
+nav ul ul li
+    border-bottom: none
+    padding-left: 80px
+nav ul ul li:last-child
+    padding-bottom: 0
+nav ul ul li a:first-child
+    padding-top: 0
+nav ul ul li a:last-child
+    padding-bottom: 20px
 nav ul ul li a
     line-height: 1.1em
     float: none
@@ -103,30 +135,33 @@ nav ul ul li a
     padding: 10px 0
     font-size: 1.4em
     color: $offWhite
-
 nav ul li a:hover
-    color: $rose
-
+    color: $gold
+.navIndex ul.open
+    opacity: .9
 .topLink
     font-size: 1.8em
-
 header .burger-nav
     display: block
     width: 100%
     cursor: pointer
     height: 60px
     background-color: black
-    opacity: .7
-
+    opacity: .9
+    position: relative
+    border-bottom: solid 2px $gold
 .burgerIcon
-    padding-left: 86%
-    padding-top: 12px
-    width: 40px
-    height: auto
+    padding-left: 81%
+    padding-top: 13px
+    display: block
     z-index: 300
-
+    position: absolute
+    top: 0
+    right: 5%
 .coverImg
     @include cover
+
+// FOOTER
 
 
 
